--- a/brain_games/pyproject.toml
+++ b/brain_games/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
+brain-even = "brain_games.scripts.brain_even:main"
+brain-calc = "brain_games.scripts.brain_calc:main"
 
 [build-system]
 requires = ["poetry-core"]
