--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,11 @@ packages = [
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
+brain-even = "brain_games.scripts.brain_even:main"
+brain-calc = "brain_games.scripts.brain_calc:main"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = ">=3.8.1,<4.0"
 prompt = "^0.4.1"
 
 [build-system]
